--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,14 @@ asyncpg==0.29.0
 attrs==23.2.0
 Babel==2.13.1
 bcrypt==4.1.3
+boto3==1.35.59
+botocore==1.35.59
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 defusedxml==0.7.1
 et-xmlfile==1.1.0
+fastapi-storages==0.3.0
 fasteners==0.19
 frozenlist==1.4.1
 greenlet==3.0.3
@@ -23,6 +26,7 @@ h11==0.14.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jmespath==1.0.1
 magic-filter==1.0.12
 MarkupSafe==2.1.5
 multidict==6.0.5
@@ -41,9 +45,11 @@ pytz==2024.2
 redis==5.0.4
 redis-dict==2.5.0
 requests==2.31.0
+s3transfer==0.10.3
 setuptools==75.1.0
 six==1.16.0
 sniffio==1.3.1
+sqladmin==0.20.1
 SQLAlchemy==2.0.30
 sqlalchemy-file==0.6.0
 starlette==0.37.2
@@ -52,4 +58,5 @@ typing_extensions==4.11.0
 tzdata==2024.2
 urllib3==2.2.1
 uvicorn==0.29.0
+WTForms==3.1.2
 yarl==1.9.4
